<resources>
    <string name="app_name">ApMob</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_blank_fragment">Login:</string>
    <string name="menutitle_showBrainstorms">Brainstorm List</string>
    <string name="mainmenu_addUser">Register</string>
    <string name="mainmenu_showAbout">Show About</string>
    <string name="menutitle_generate">Generate Data</string>
    <string name="no_user_message">No User Logged</string>
    <string name="no_login_user">No User Logged</string>
    <string name="no_brainstorm_text">There should be Brainstorm title</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="register_button">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="mainmenu_login">Login</string>
    <string name="loginview_password">Password:</string>
    <string name="login_buttton_text">Login</string>
    <string name="loggedmenu_logout">Logout</string>
    <string name="loggedmenu_show_brainstorms">My Brainstorms</string>
    <string name="loggedmenu_all">All Brainstorms</string>
    <string name="show_details_button">Details</string>
    <string name="Instruction_heading">Instructions</string>
    <string name="new_brainstorm">New Brainstorm</string>
    <string name="add_brainstorm_title">Title:</string>
    <string name="add_brainstorm_answers">Pass the number of answers to generate</string>
    <string name="add_brainstorm_addbutton">Add New Brainstorm</string>
    <string name="title_activity_logged">LoggedActivity</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>