<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.apmob.MainActivity">
    <item
        android:id="@+id/newUser"
        android:icon="@android:drawable/ic_menu_add"
        android:orderInCategory="10"
        android:title="@string/mainmenu_addUser"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/mainmenu_showBrainsorms"
        android:icon="@android:drawable/ic_menu_view"
        android:orderInCategory="20"
        android:title="@string/menutitle_showBrainstorms"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/mainmenu_settings"
        android:orderInCategory="30"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/mainmenu_showAbout"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="40"
        android:title="@string/mainmenu_showAbout"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menumain_generate"
        android:orderInCategory="50"
        android:title="@string/menutitle_generate"
        android:visible="false"
        app:showAsAction="never" />
</menu>