<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/newBrainstorm"
        android:icon="@android:drawable/ic_input_add"
        android:orderInCategory="1"
        android:title="@string/new_brainstorm"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/logout"
        android:orderInCategory="60"
        android:title="@string/loggedmenu_logout" />
    <item
        android:id="@+id/myBrainstorms"
        android:orderInCategory="10"
        android:title="@string/loggedmenu_show_brainstorms"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/allBrainstorms"
        android:orderInCategory="20"
        android:title="@string/loggedmenu_all" />
</menu>